# solarkat

./: .gitignore  CHANGELOG.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  solarkat-pipeline-perscan-pertime.yml  solarkat-pipeline-perscan.yml  solarkat-pipeline.yml  split_ms.py  split_ms_time.py
solarkat/: __init__.py  log-stimela.txt  solarkat-cabs.yaml  solarkat-observation-sets.yaml  solarkat.py  solarkat.yaml  stimela.config.deps
solarkat-pipeline/: SolarKAT.yml  find_sun_stimela.py  find_sun_utils.py  oms-cabs.yml  selfcal-boom-new.yml  setup.py  solarkat-cabs.yaml  solarkat-observation-sets.yaml  solarkat-observation-sets.yml  solarkat-pipeline-perscan.yml  solarkat-pipeline.yml  solarkat.py  solarkat.yaml  solarkat_pip_files.txt
solarkat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
solarkat/logs/: log
solarkat/logs/log-20250404-124155/: log-solarkat.txt  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
solarkat/logs/log-20250404-124700/: log-solarkat.txt  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
solarkat/logs/log-20250404-124927/: log-solarkat.txt  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
solarkat/logs/log-20250404-125131/: log-solarkat.txt  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
solarkat/logs/log-20250404-125500/: log-solarkat.backup-model-data.txt  log-solarkat.txt  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
solarkat/logs/log-20250404-135336/: log-solarkat.txt  (+3 more)
(+20 files in other folders)
